2014-07-05  Allen D. Ball  <ball@sol.local>

	* pom.xml: Specify JRE dependency,

2014-07-02  Allen D. Ball  <ball@sol.local>

	* Renamed iprotium.upnp to ball.upnp.

2014-03-22  Allen D. Ball  <ball@sol.local>

	* Silence JDK 1.7 compilation warnings.

2014-01-26  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/Device.java:
	Configure web application Context in LifecycleListenerImpl.

2014-01-05  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/SSDPThread.java:
	Implement LifecycleListener and replace alive() and byebye()
	callbacks with add(Device...) and remove(Device...) methods.

2014-01-03  Allen D. Ball  <ball@10-0-1-2.lan>

	* Added <tomcat/> build target and Ant Task.

	* src/main/java/iprotium/upnp/Device.java:
	Call SSDPThread.byebye() on Tomcat stop.
	Configure and install Servlets in a StandardContext subclass.
	Added Velocity servlet and SSDP cache page.
	Handle Device configuration in a Server LifecycleListener.

	* src/main/java/iprotium/upnp/SSDPThread.java:
	Added alive() method.
	Provide notify requests and responses for Devices.

2013-12-31  Allen D. Ball  <ball@10-0-1-2.lan>

	* Moved all path calculations from Service to (internal to)
	Device.

	* src/main/java/iprotium/upnp/ControlServlet.java,
	src/main/java/iprotium/upnp/EventServlet.java,
	src/main/java/iprotium/upnp/SCPDServlet.java:
	Initial writing (provides scaffolding only).

2013-12-30  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/SSDPThread.java:
	Override ping() to only broadcast a SSDPDiscoveryRequest if the
	SSDPDiscoveryCache is empty or an entry is about to expire.
	Added byebye() method.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
	Added ping() method and made interval member protected.

	* src/main/java/iprotium/upnp/ssdp/SSDPMessage.java:
	Changed Impl.getLocation(SSDPMessage) to use AL if
	HttpHeaders.LOCATION is not set.

2013-12-27  Allen D. Ball  <ball@10-0-1-2.lan>
